Revision history for MooseX-Getopt

{{$NEXT}}

0.76      2023-12-18 20:19:14Z
 - adjust tests to deal with formatting changes in Getopt::Long::Descriptive
   0.113

0.75      2021-03-16 19:25:29Z
 - adjust tests to deal with formatting changes in Getopt::Long::Descriptive
   0.106 (RT#134754)

0.74      2018-09-23 23:41:10Z
 - fix init_arg when used in combination with an underscored attribute read
   from the config file (Andreas Koenig, github #11)

0.73      2018-09-01 05:43:55Z
 - properly wrap usage text that contains newlines (Andreas Koenig, github
   #10)
 - move the exit() to a higher scope, to allow for 'after' method modifiers on
   'print_usage_text' (Michael Schout, github #9)

0.72      2018-08-04 04:45:57Z
 - fix tests that broke with Getopt::Long::Descriptive 0.103 (RT#125992,
   Damyan Ivanov, debian-perl group)

0.71      2016-06-19 04:08:13Z
 - private attributes (i.e., lead "_) with a public init_arg now work.

0.70      2016-05-10 20:32:32Z
 - In 0.69, an undefined init_arg would cause warnings and exception.
   Attributes with an undefined init_arg are now ignored. (thanks, Greg
   Oschwald! -- PR #7)

0.69      2016-04-22 11:27:12Z
 - attributes' "init_arg" settings are now respected when retrieving command
   line options (thanks, Olaf Alders! -- PR#6)

0.68      2015-03-04 18:16:30Z
 - fix tests that look for the wrong prereqs (0.67)

0.67      2015-02-28 04:37:19Z
 - remove argv from passed-through buildargs if no argv attribute exists, to
   mollify MooseX::StrictConstructor (RT#101938, Jose Luis Martinez)

0.66      2015-01-28 02:05:54Z
 - fix tests for formatting changes in Getopt::Long::Descriptive 0.099
   (RT#101724)

0.65      2014-08-06 06:09:04Z
 - re-release to remove README.pod from shipped dist

0.64      2014-08-02 17:35:20Z
 - bump required version of Getopt::Long::Descriptive to avoid an infinite
   loop problem (thanks, Bram!)

0.63      2014-03-25 16:37:58Z
 - fix test prereq on Test::Warnings (thanks, omega!)
